--- a/playbooks/roles/common/templates/motd.tail.j2
+++ b/playbooks/roles/common/templates/motd.tail.j2
@@ -1,12 +1,16 @@
-******************************************************************* 
-*         _ __  __                                                *  
-*   _   _| |\ \/ /  This system is for the use of authorized      * 
-* / -_) _` | >  <   users only.  Usage of this system may be      *
-* \___\__,_|/_/\_\  monitored and recorded by system personnel.   *
-*                                                                 *
-* Anyone using this system expressly consents to such monitoring  *
-* and is advised that if such monitoring reveals possible         *
-* evidence of criminal activity, system personnel may provide the *
-* evidence from such monitoring to law enforcement officials.     *
-*                                                                 *
-*******************************************************************
+**********************************************************************
+*   _  __ _         _         This software is             _ __  __  *
+*  (_)/ _| |   __ _| |__    distributed by iflab.    _   _| |\ \/ /  *
+*  | |  _| |__/ _` | '_ \   For more information， / -_) _` | >  <   *
+*  |_|_| |____\__,_|_.__/       please email       \___\__,_|/_/\_\  *
+*                            project@iflab.org.                      *
+*                                                                    *
+*  This system is for the use of authorized users only.  Usage of    *
+*  this system may be monitored and recorded by system personnel.    *
+*                                                                    *
+*  Anyone using this system expressly consents to such monitoring    *
+*  and is advised that if such monitoring reveals possible           *
+*  evidence of criminal activity, system personnel may provide the   *
+*  evidence from such monitoring to law enforcement officials.       *
+*                                                                    *
+**********************************************************************
