--- a/playbooks/roles/common/templates/motd.tail.j2
+++ b/playbooks/roles/common/templates/motd.tail.j2
@@ -1,7 +1,7 @@
 **********************************************************************
 *   _  __ _         _         This software is             _ __  __  *
 *  (_)/ _| |   __ _| |__    distributed by iflab.    _   _| |\ \/ /  *
-*  | |  _| |__/ _` | '_ \   For more information， / -_) _` | >  <   *
+*  | |  _| |__/ _` | '_ \   For more information,  / -_) _` | >  <   *
 *  |_|_| |____\__,_|_.__/       please email       \___\__,_|/_/\_\  *
 *                            project@iflab.org.                      *
 *                                                                    *
